--- a/www/lib/ionic/scss/_tabs.scss
+++ b/www/lib/ionic/scss/_tabs.scss
@@ -468,7 +468,7 @@ ion-tabs {
 
 /* Navigational tab */
 
-/* Active state for tab */
+/* Active templates for tab */
 .tab-item.tab-item-active,
 .tab-item.active,
 .tab-item.activated {
