--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -1,31 +1,6 @@
-<!--
-
-<ion-side-menus>
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-positive">
-      <ion-nav-back-button class="button-clear">
-        <i class="icon ion-android-arrow-back"></i>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <ion-nav-view name="appView"></ion-nav-view>
-  </ion-side-menu-content>
-
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-dark"></ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item>Setting 1</ion-item>
-        <ion-item>Setting 2</ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
-</ion-side-menus>
-
--->
-
 <ion-nav-bar class="bar-dark">
-  <ion-nav-back-button
-    class="button-icon ion-android-arrow-back"></ion-nav-back-button>
+<ion-nav-back-button
+  class="button-icon ion-android-arrow-back"></ion-nav-back-button>
 </ion-nav-bar>
 <ion-nav-title></ion-nav-title>
-<ion-nav-view name="appView"></ion-nav-view>
+<ion-nav-view name="appView" animation="slide-left-right"></ion-nav-view>
