--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,7 +1,10 @@
 <ion-view ng-controller="titleCtl" title="{{ title }}">
     <ion-content>
       <ion-list ng-controller="menuCtl">
-        <ion-item ng-repeat="item in menuItems" ui-sref="{{ item.state }}">
+        <ion-item
+          ng-repeat="item in menuItems"
+          ui-sref="{{ item.state }}"
+          ng-click="{{ item.clickHandler }}">
           {{ item.name }}
         </ion-item>
       </ion-list>
