--- a/www/templates/app.html
+++ b/www/templates/app.html
@@ -4,3 +4,11 @@
 </ion-nav-bar>
 <ion-nav-title></ion-nav-title>
 <ion-nav-view name="appView" animation="slide-left-right"></ion-nav-view>
+<ion-footer-bar class="bar-dark">
+  <div class="button-bar-inline">
+    <button
+      class="button ion-information-circled"
+      title="About"
+      ui-sref="app.about"></button>
+  </div>
+</ion-footer-bar>
