--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,38 @@
-/* Empty. Add your own CSS if you like */
+html, body.
+#slideContainer,
+#imageContainer,
+#captionCotainer
+{
+  position:relative;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
+#slideContainer {
+  display:table;
+  position:absolute;
+  width:100%;
+  height:100%;
+}
+
+#imageContainer {
+  display:table-cell;
+  vertical-align: middle;
+
+}
+
+#slideImg {
+  display:block;
+  min-width:100%;
+  min-height:100%;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+#captionCotainer {
+
+}
+
+
