--- a/www/templates/showcase.html
+++ b/www/templates/showcase.html
@@ -1,5 +1,11 @@
 <ion-view title="Showcase">
   <ion-content>
-    <h1></h1>
+
+    <div ng-controller="slideshow" id="slideContainer">
+      <div id="imageContainer">
+        <img id="slideImg"/>
+      </div>
+      <div id="captionCotainer"></div>
+    </div>
   </ion-content>
 </ion-view>
