working (local) application

--- a/www/templates/showcase.html
+++ b/www/templates/showcase.html
@@ -1,12 +1,11 @@
-<ion-view class="showcase" title="Showcase">
-  <ion-content>
+<ion-view class="showcase full-page" title="Showcase" hide-nav-bar="true">
+  <ion-content class="full-page">
 
-    <div ng-controller="slideshow">
-      <div class="image">
+    <div class="full-page" ng-controller="slideshow">
+      <div class="image full-page" id="image-showcasing">
         
-        <div class="caption">
-
-        </div>
+        <p class="caption" id="caption-showcasing">
+        </p>
       </div>
     </div>
   </ion-content>
