--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,16 +21,45 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+.full-page {
+  height: 100%;
+  width: 100%;
+}
+
+.scroll {
+  @extend .full-page;
+}
+
 .showcase {
-  position: relative;
 
   .image {
 
-    height: 100%;
-    width: 100%;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
+    -webkit-transition: background 400ms ease-in;
+    -moz-transition: background 400ms ease-in;
+    -o-transition: background 400ms ease-in;
+    transition: background 400ms ease-in;
+
+    text-align: center;
 
     .caption {
+      position: absolute;
+      bottom: 30%;
+      right: 10%;
+      width: 40%;
+      z-index: 4;
+      color: white;
+
+      padding: 20px 0;
+
+      display: block;
+
+      background-color: rgba(0, 0, 0, 0.4);
+      font-size: 24px;
 
     }
 
