--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9089,8 +9089,28 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
-.showcase {
-  position: relative; }
-  .showcase .image {
-    height: 100%;
-    width: 100%; }
+.full-page, .scroll {
+  height: 100%;
+  width: 100%; }
+
+.showcase .image {
+  background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  -webkit-transition: background 400ms ease-in;
+  -moz-transition: background 400ms ease-in;
+  -o-transition: background 400ms ease-in;
+  transition: background 400ms ease-in;
+  text-align: center; }
+  .showcase .image .caption {
+    position: absolute;
+    bottom: 30%;
+    right: 10%;
+    width: 40%;
+    z-index: 4;
+    color: white;
+    padding: 20px 0;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-size: 24px; }
