added facebook integration

--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -13,7 +13,7 @@
           ng-keydown="expandText()">
         </textarea> 
       </label>
-      <button type="submit" class="button button-block button-positive">Create Task</button>
+      <button type="submit" class="button button-block button-positive">Create Memory</button>
     </form>
 
   </ion-content>
